--- a/src/Components/Pages/HomePage/HomePage.css
+++ b/src/Components/Pages/HomePage/HomePage.css
@@ -1,3 +1,31 @@
 .home Link{
     text-decoration: none;
 }
+
+p{
+    width:35vw;
+    text-justify: auto;
+    padding-left: 1.5vw;
+    text-align:left ;
+    margin-top: 0;
+}
+
+.home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 40vw;
+}
+
+.box {
+    display: flex;
+    justify-content: center;
+}
+
+.home h2 {
+    padding-left: 1.5vw;
+    text-align:left ;
+    font-size: 30px;
+    margin-top: 0;
+    margin-bottom: 0;
+}
